# changetools-python

./: README.md  pyproject.toml  setup.cfg  tox.ini
src/changetools/: __init__.py  evaluator.py
tests/unit/: test_change_evaluator.py
